--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1B.cfg
@@ -142,6 +142,26 @@ interface Ethernet11
    vrf Tenant_A_L3_VRF_Zone
    ip address 10.10.40.20/24
 !
+interface Ethernet12
+   description test l3 interfaces acls
+   no shutdown
+   mtu 9000
+   no switchport
+   vrf Tenant_A_L3_VRF_Zone
+   ip address 10.10.50.10/24
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12 out
+!
+interface Ethernet13
+   description test l3 interfaces acls
+   no shutdown
+   mtu 9000
+   no switchport
+   vrf Tenant_A_L3_VRF_Zone
+   ip address 10.10.50.20/24
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13 out
+!
 interface Ethernet4000
    description My second test
    no shutdown
@@ -211,6 +231,12 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet8
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet9
    15 deny ip any host 10.10.40.20
 !
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12
+   15 deny ip any host 10.10.50.10
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet13
+   15 deny ip any host 10.10.50.20
+!
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8
    remark Some remark will not require source and destination fields.
    permit ip host 10.10.30.10 any
@@ -218,6 +244,14 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet8
 ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet9
    remark Some remark will not require source and destination fields.
    permit ip host 10.10.40.20 any
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet12
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.10.50.10 any
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet13
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.10.50.20 any
 !
 ip routing
 no ip routing vrf MGMT
