--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -54,12 +54,36 @@ ethernet_interfaces:
       dot1q:
         ethertype: 1536
       vlan_translations:
-        - from: 23-37
-          to: 45
-          direction: in
-        - from: 23-37
-          to: 45
-          direction: out
+        direction_in:
+          - required: true
+          - from: 37
+            to: 49
+            inner_from: 56
+          - from: 23
+            to: 45
+            dot1q_tunnel: true
+        direction_both:
+          - from: 24
+            inner_from: 78
+            network: true
+            to: 46
+          - from: 12
+            to: 20
+          - from: 43
+            to: 30
+            dot1q_tunnel: true
+        direction_out:
+          - from: 10
+            to: 45
+            inner_to: 34
+          - from: 34
+            to: 50
+          - from: 45
+            dot1q_tunnel:
+              all: true
+          - from: 23
+            dot1q_tunnel:
+              to: 22
       vlan_forwarding_accept_all: true
       source_interface: tx
       backup_link:
