--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -134,12 +134,36 @@ port_channel_interfaces:
         vlan_tag: required
       source_interface: tx multicast
       vlan_translations:
-        - from: 23-37
-          to: 45
-          direction: in
-        - from: 23-37
-          to: 45
-          direction: out
+        direction_in:
+          - required: true
+          - from: 37
+            to: 49
+            inner_from: 56
+          - from: 23
+            to: 45
+            dot1q_tunnel: true
+        direction_both:
+          - from: 24
+            inner_from: 78
+            network: true
+            to: 46
+          - from: 12
+            to: 20
+          - from: 43
+            to: 30
+            dot1q_tunnel: true
+        direction_out:
+          - from: 10
+            to: 45
+            inner_to: 34
+          - from: 34
+            to: 50
+          - from: 45
+            dot1q_tunnel:
+              all: true
+          - from: 23
+            dot1q_tunnel:
+              to: 22
       vlan_forwarding_accept_all: true
       backup_link:
         interface: Ethernet5
