--- a/ansible_collections/arista/avd/changelogs/.plugin-cache.yaml
+++ b/ansible_collections/arista/avd/changelogs/.plugin-cache.yaml
@@ -91,6 +91,11 @@ plugins:
       name: cv_workflow
       namespace: ''
       version_added: 4.7.0
+    eos_cli_config_gen:
+      description: Generate AVD EOS device configurations and documentations
+      name: eos_cli_config_gen
+      namespace: ''
+      version_added: 4.9.0
     eos_designs_facts:
       description: Set eos_designs facts
       name: eos_designs_facts
@@ -155,4 +160,4 @@ plugins:
         than group_vars or host_vars
       name: global_vars
       version_added: 4.0.0
-version: 4.8.0
+version: 4.9.0
