--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1A.cfg
@@ -35,9 +35,6 @@ ip igmp snooping vlan 252 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.3
 ip igmp snooping vlan 257 fast-leave
-ip igmp snooping vlan 4091 querier
-ip igmp snooping vlan 4091 querier address 192.168.255.3
-ip igmp snooping vlan 4091 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.3
 ip igmp snooping vlan 4092 fast-leave
@@ -212,9 +209,6 @@ vlan 3059
    name MLAG_iBGP_TEN_E_L3_MULTICAST_EVPN_PEG_RP_NODES
    trunk group LEAF_PEER_L3
 !
-vlan 4091
-   name MULTICAST_ENABLED_4091
-!
 vlan 4092
    name MULTICAST_ENABLED_4092
 !
@@ -285,7 +279,7 @@ interface Port-Channel6
    description EVPN-MULTICAST-L2LEAF1A_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4091-4092
+   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092
    switchport mode trunk
    mlag 6
 !
@@ -739,7 +733,6 @@ interface Vxlan1
    vxlan vlan 330 vni 10330
    vxlan vlan 331 vni 10331
    vxlan vlan 550 vni 10550
-   vxlan vlan 4091 vni 14091
    vxlan vlan 4092 vni 14092
    vxlan vrf MULTICAST_DISABLED_5_6 vni 23
    vxlan vrf MULTICAST_DISABLED_310_311 vni 13
@@ -767,7 +760,6 @@ interface Vxlan1
    vxlan vlan 210 multicast group 232.0.0.209
    vxlan vlan 252 multicast group 232.0.0.251
    vxlan vlan 257 multicast group 232.0.1.0
-   vxlan vlan 4091 multicast group 232.0.15.250
    vxlan vlan 4092 multicast group 232.0.15.251
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_130_131 multicast group 232.0.32.31
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231 multicast group 232.0.32.32
@@ -957,13 +949,6 @@ router bgp 65101
       redistribute igmp
       redistribute learned
       vlan 257
-   !
-   vlan-aware-bundle MULTICAST_ENABLED_4091
-      rd 192.168.255.3:14091
-      route-target both 14091:14091
-      redistribute igmp
-      redistribute learned
-      vlan 4091
    !
    vlan-aware-bundle MULTICAST_ENABLED_4092
       rd 192.168.255.3:14092
