--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
@@ -564,16 +564,6 @@ router_bgp:
     - learned
     - igmp
     vlan: '252'
-  - name: MULTICAST_ENABLED_4091
-    tenant: Tenant_F
-    rd: 192.168.255.3:14091
-    route_targets:
-      both:
-      - 14091:14091
-    redistribute_routes:
-    - learned
-    - igmp
-    vlan: '4091'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -875,9 +865,6 @@ vlans:
   tenant: Tenant_F
 - id: 252
   name: MULTICAST_ENABLED_252
-  tenant: Tenant_F
-- id: 4091
-  name: MULTICAST_ENABLED_4091
   tenant: Tenant_F
 vlan_interfaces:
 - name: Vlan4093
@@ -1269,7 +1256,7 @@ port_channel_interfaces:
   type: switched
   shutdown: false
   mode: trunk
-  vlans: 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4091-4092
+  vlans: 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092
   mlag: 6
 ethernet_interfaces:
 - name: Ethernet3
@@ -1500,11 +1487,6 @@ ip_igmp_snooping:
       enabled: true
       address: 192.168.255.3
     fast_leave: true
-  - id: 4091
-    querier:
-      enabled: true
-      address: 192.168.255.3
-    fast_leave: true
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
 vxlan_interface:
   Vxlan1:
@@ -1594,9 +1576,6 @@ vxlan_interface:
       - id: 252
         vni: 10252
         multicast_group: 232.0.0.251
-      - id: 4091
-        vni: 14091
-        multicast_group: 232.0.15.250
       vrfs:
       - name: MULTICAST_DISABLED_310_311
         vni: 13
