Feat(eos_designs): Add option for ip igmp snooping fast-leave (#4180)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
@@ -2,6 +2,9 @@
 !
 vlan internal order ascending range 1006 1199
 !
+ip igmp snooping vlan 230 querier
+ip igmp snooping vlan 230 querier address 192.168.255.8
+!
 transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
@@ -79,6 +82,12 @@ vlan 241
 !
 vlan 250
    name L3_MULTICAST_ENABLED_250
+!
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
 !
 vlan 256
    name MULTICAST_DISABLED_256
@@ -414,6 +423,8 @@ interface Vxlan1
    vxlan vlan 240 vni 10240
    vxlan vlan 241 vni 10241
    vxlan vlan 250 vni 10250
+   vxlan vlan 251 vni 10251
+   vxlan vlan 252 vni 10252
    vxlan vlan 256 vni 10256
    vxlan vlan 257 vni 10257
    vxlan vlan 260 vni 10260
@@ -589,6 +600,17 @@ router bgp 65106
    vlan 250
       rd 192.168.255.8:10250
       route-target both 10250:10250
+      redistribute learned
+   !
+   vlan 251
+      rd 192.168.255.8:10251
+      route-target both 10251:10251
+      redistribute learned
+   !
+   vlan 252
+      rd 192.168.255.8:10252
+      route-target both 10252:10252
+      redistribute igmp
       redistribute learned
    !
    vlan 256
