--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
@@ -525,6 +525,23 @@ router_bgp:
       - 10150:10150
     redistribute_routes:
     - learned
+  - id: 251
+    tenant: Tenant_F
+    rd: 192.168.255.8:10251
+    route_targets:
+      both:
+      - 10251:10251
+    redistribute_routes:
+    - learned
+  - id: 252
+    tenant: Tenant_F
+    rd: 192.168.255.8:10252
+    route_targets:
+      both:
+      - 10252:10252
+    redistribute_routes:
+    - learned
+    - igmp
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -797,8 +814,19 @@ vlans:
 - id: 150
   name: L3_MULTICAST_ENABLED_150
   tenant: Tenant_E
+- id: 251
+  name: MULTICAST_DISABLED_251
+  tenant: Tenant_F
+- id: 252
+  name: MULTICAST_ENABLED_252
+  tenant: Tenant_F
 ip_igmp_snooping:
   globally_enabled: true
+  vlans:
+  - id: 230
+    querier:
+      enabled: true
+      address: 192.168.255.8
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
 vlan_interfaces:
 - name: Vlan310
@@ -1079,6 +1107,10 @@ vxlan_interface:
         vni: 10250
       - id: 150
         vni: 10150
+      - id: 251
+        vni: 10251
+      - id: 252
+        vni: 10252
       vrfs:
       - name: MULTICAST_DISABLED_310_311
         vni: 13
