--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
@@ -5,6 +5,7 @@ vlan internal order ascending range 1006 1199
 ip igmp snooping vlan 1 querier
 ip igmp snooping vlan 1 querier address 1.1.1.1
 ip igmp snooping vlan 1 querier version 3
+ip igmp snooping vlan 1 fast-leave
 ip igmp snooping vlan 2 querier
 ip igmp snooping vlan 2 querier address 1.1.1.1
 ip igmp snooping vlan 2 querier version 3
@@ -19,14 +20,24 @@ ip igmp snooping vlan 9 querier address 2.2.2.2
 ip igmp snooping vlan 9 querier version 1
 ip igmp snooping vlan 110 querier
 ip igmp snooping vlan 110 querier address 192.168.255.6
+ip igmp snooping vlan 110 fast-leave
 ip igmp snooping vlan 111 querier
 ip igmp snooping vlan 111 querier address 192.168.255.6
+ip igmp snooping vlan 111 fast-leave
 ip igmp snooping vlan 210 querier
 ip igmp snooping vlan 210 querier address 192.168.255.6
+ip igmp snooping vlan 210 fast-leave
+ip igmp snooping vlan 230 querier
+ip igmp snooping vlan 230 querier address 192.168.255.6
+ip igmp snooping vlan 252 querier
+ip igmp snooping vlan 252 querier address 192.168.255.6
+ip igmp snooping vlan 252 fast-leave
 ip igmp snooping vlan 257 querier
 ip igmp snooping vlan 257 querier address 192.168.255.6
+ip igmp snooping vlan 257 fast-leave
 ip igmp snooping vlan 4092 querier
 ip igmp snooping vlan 4092 querier address 192.168.255.6
+ip igmp snooping vlan 4092 fast-leave
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -105,6 +116,12 @@ vlan 241
 !
 vlan 250
    name L3_MULTICAST_ENABLED_250
+!
+vlan 251
+   name MULTICAST_DISABLED_251
+!
+vlan 252
+   name MULTICAST_ENABLED_252
 !
 vlan 256
    name MULTICAST_DISABLED_256
@@ -481,6 +498,8 @@ interface Vxlan1
    vxlan vlan 240 vni 10240
    vxlan vlan 241 vni 10241
    vxlan vlan 250 vni 10250
+   vxlan vlan 251 vni 10251
+   vxlan vlan 252 vni 10252
    vxlan vlan 256 vni 10256
    vxlan vlan 257 vni 10257
    vxlan vlan 260 vni 10260
@@ -513,6 +532,7 @@ interface Vxlan1
    vxlan vlan 110 multicast group 232.0.0.109
    vxlan vlan 111 multicast group 232.0.0.110
    vxlan vlan 210 multicast group 232.0.0.209
+   vxlan vlan 252 multicast group 232.0.0.251
    vxlan vlan 257 multicast group 232.0.1.0
    vxlan vlan 4092 multicast group 232.0.15.251
    vxlan vrf TEN_C_L3_MULTICAST_ENABLED_130_131 multicast group 232.0.32.31
@@ -673,6 +693,17 @@ router bgp 65104
    vlan 250
       rd 192.168.255.6:10250
       route-target both 10250:10250
+      redistribute learned
+   !
+   vlan 251
+      rd 192.168.255.6:10251
+      route-target both 10251:10251
+      redistribute learned
+   !
+   vlan 252
+      rd 192.168.255.6:10252
+      route-target both 10252:10252
+      redistribute igmp
       redistribute learned
    !
    vlan 256
