Added molecule tests for tunnel-interfaces underlay-vrf

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
@@ -24,6 +24,7 @@ interface Tunnel1
    tunnel mode ipsec
    tunnel source interface Ethernet42
    tunnel destination 6.6.6.6
+   tunnel underlay vrf Underlay-VRF
    tunnel path-mtu-discovery
    comment
    Comment created from eos_cli under tunnel_interfaces.Tunnel1
