--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mpls.yml
@@ -5,6 +5,9 @@ mpls:
     router_id: 192.168.1.1
     shutdown: false
     transport_address_interface: Loopback0
+  icmp:
+    fragmentation_needed_tunneling: true
+    ttl_exceeded_tunneling: true
 
 ethernet_interfaces:
   - name: Ethernet1
