--- a/ansible_collections/arista/avd/roles/eos_validate_state/tasks/ansible_tests.yml
+++ b/ansible_collections/arista/avd/roles/eos_validate_state/tasks/ansible_tests.yml
@@ -5,6 +5,17 @@
 #####################################
 ##  Run ansible eos_validate_state  ##
 #####################################
+- name: "Warning when not using 'use_anta: true'"
+  arista.avd._emit_warning:
+    message: |-
+      Starting AVD 5.0.0, `eos_validate_state` will use ANTA as backend, which will change the default behavior (same as setting `use_anta: true` in older versions).
+      Please review the changes described on the ANTA integration page on https://avd.arista.com.
+  delegate_to: localhost
+  check_mode: false
+  changed_when: false
+  run_once: true
+  tags:
+    - always
 
 - name: Generate variables for testing
   ansible.builtin.template:
